--- a/config/Rules.am
+++ b/config/Rules.am
@@ -29,6 +29,10 @@ AM_CFLAGS += -fPIC -Werror -Wno-unknown-pragmas -Wno-enum-conversion
 AM_CFLAGS += -include $(top_srcdir)/include/os/freebsd/spl/sys/ccompile.h
 AM_CFLAGS += -I/usr/include -I/usr/local/include
 endif
+if BUILD_ILLUMOS
+# XXX place filler for now
+AM_CFLAGS += -include $(top_srcdir)/include/os/illumos/spl/sys/ccompile.h
+endif
 
 AM_CPPFLAGS += -D_GNU_SOURCE
 AM_CPPFLAGS += -D_REENTRANT
